resources/rest-api-demo/gateway-injection-front-end.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-front-end-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/prod-gateway
  http:
  # TODO: Faults aren't taking
  # - fault:
  #     abort:
  #       httpStatus: 500
  #       percentage:
  #         value: 100
  #     delay:
  #       percentage:
  #         value: 50 # Inject delay for 50% of requests
  #       fixedDelay: 5s # Introduce a 5-second delay
  - match:
    - uri:
        exact: "/web"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: web-front-end 
  - match:
    - uri:
        exact: "/web/hello"
    rewrite:
      uri: "/hello"
    route:
    - destination:
        host: web-front-end 
  - match:
    - uri:
        exact: "/web/hello-service"
    rewrite:
      uri: "/hello-service"
    route:
    - destination:
        host: web-front-end
